--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="index.css">
+        <title>Document</title>
+    </head>
+    <body>
+        <div class="login_class">
+            <div class="login_container">
+                    <form id='index.php' action='create.php' method='post' accept-charset='UTF-8'>
+                            <input type='hidden' name='submitted' id='submitted' value='1'/>
+                            <input type='text' name='login' id='login'  maxlength="500" placeholder="Username or Email"/>
+                            <input type='password' name='passwd' id='passwd' maxlength="50" placeholder="Password"/>
+                            <input type='submit' name='submit' value='Sing in' />
+                    </form>
+                    <a class="create_account" href="new_account.html">
+                        Create Account
+                    </a>
+            </div>
+        </div>
+    </body>
 </html>
