--- a/new_account.html
+++ b/new_account.html
@@ -3,10 +3,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="new_account.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="info_box">
+        <div class="info">
+                <form id='new_account' action='login.php' method='post' accept-charset='UTF-8'>
+                        <input type='hidden' name='submitted' id='submitted' value='1'/>
+                        <label for='name' >Name<span>*</span></label><br>
+                        <input type='text' name='name' id='name'  maxlength="50" /><br>
+
+                        <label for='surname' >Surname<span>*</span></label>
+                        <input type='text' name='surname' id='surname' maxlength="50" /><br>
+
+                        <label for='login' >Username<span>*</span></label><br>
+                        <input type='text' name='login' id='login'  maxlength="50" /><br>
+
+                        <label for='passwd' >Password<span>*</span></label>
+                        <input type='passwd' name='passwd' id='passwd' maxlength="50" /><br>
+
+                        <label for='email' >Email<span>*</span></label><br>
+                        <input type='text' name='email' id='email'  maxlength="50" /><br>
+
+                        <label for='phone_number' >Phone Number<span>*</span></label>
+                        <input type='text' name='phone_number' id='phone_number' maxlength="50" /><br>
+                        
+                        <input type='submit' name='submit' value='CREATE' />
+                    </form>
+        </div>
+    </div>
 </body>
 </html>
